--- a/style.css
+++ b/style.css
@@ -47,3 +47,10 @@ display: grid;
 grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 grid-gap: 20px;
 }
+
+iframe {
+    width: 100%;
+    height: 315px;
+    border: none;
+    margin-top: 20px;
+}
