--- a/style.css
+++ b/style.css
@@ -42,15 +42,17 @@ button:hover {
     border-radius: 5px;
 }
 
-#movie-container {
-display: grid;
-grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-grid-gap: 20px;
-}
+
 
 iframe {
     width: 100%;
     height: 315px;
     border: none;
     margin-top: 20px;
+}
+
+.movie-grid, #favorites-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 20px;
 }
